--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,21 @@
-[env:esp32-c6-devkitc-1]
-platform = espressif32
-board = esp32-c6-devkitc-1
-framework = espidf
-monitor_speed = 115200
-upload_speed = 921600
-board_build.partitions = partitions.csv
+; PlatformIO Configuration for ESP32-C6 Plant Monitoring System
+; =============================================================
+; This configuration file defines the build environment for the ESP32-C6
+; plant monitoring system using ESP-IDF framework.
+;
+; @author Plant Monitor System
+; @version 1.0.0
+; @date 2024
 
-; Build flags for better debugging
+[env:esp32-c6-devkitc-1]
+platform = espressif32                    ; ESP32 platform
+board = esp32-c6-devkitc-1               ; Target board
+framework = espidf                        ; ESP-IDF framework (native)
+monitor_speed = 115200                    ; Serial monitor baud rate
+upload_speed = 921600                     ; Upload speed for faster flashing
+board_build.partitions = partitions.csv   ; Custom partition table
+
+; Build flags for better debugging and console output
 build_flags = 
-    -DCONFIG_ESP_CONSOLE_UART_NUM=0
-    -DCONFIG_ESP_CONSOLE_UART_BAUDRATE=115200 
+    -DCONFIG_ESP_CONSOLE_UART_NUM=0      ; Use UART0 for console
+    -DCONFIG_ESP_CONSOLE_UART_BAUDRATE=115200  ; Console baud rate 
